--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -268,5 +268,22 @@
   .go-center {
     justify-content: center;
     align-items: center; }
+
+.video {
+    position: relative; 
+    padding-bottom: 56.25%; 
+    height: 0; 
+    overflow: hidden;
+   
+    }
+
+#embed {
+     position: absolute; 
+     top: 0; 
+     left: 0; 
+     width: 100%; 
+     height: 100%; 
+     border:0;
+}
   
   /*# sourceMappingURL=main.css.map */
