--- a/css/sass/_mixins.scss
+++ b/css/sass/_mixins.scss
@@ -1,4 +1,4 @@
-@skinny-hr{
+@mixin skinny-hr{
     margin: 1rem 0;
     background-color: transparent;
     //box-shadow: 0 1px 0 rgba(219,219,219,0.3);
@@ -7,6 +7,6 @@
     border-width: 1px;
 }
 
-@ease($time) {
+@mixin ease($time) {
     transition: $time ease;
 }
