--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -1,16 +1,3 @@
-@skinny-hr {
-  margin: 1rem 0;
-  background-color: transparent;
-  width: 50%;
-  border-style: solid;
-  border-width: 1px;
-}
-
-@ease ($time) {
-  -webkit-transition: 1s ease;
-  transition: 1s ease;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -31,33 +18,23 @@ body {
   line-height: 2rem;
   letter-spacing: 1.5px;
   text-shadow: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   opacity: 1;
 }
 
 h1, h2, h3 {
   margin-bottom: 0.5em;
   text-align: center;
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: "Didact Gothic", sans-serif;
   opacity: 0.6;
 }
 
 li {
   opacity: 0.8;
 }
-
 li a {
   opacity: 0.9;
 }
@@ -75,16 +52,12 @@ a {
   color: #cccccc;
   text-decoration: none;
   border-bottom: 2px solid #cccccc;
+  transition: 0.5s ease;
 }
-
-@ease (0.5s)
-    :hover {
-  a {
-    color: #fff;
-    font-style: none;
-  }
+a :hover {
+  color: #fff;
+  font-style: none;
 }
-
 a :active {
   color: #cccccc;
 }
@@ -95,13 +68,16 @@ button {
   border-radius: 5px;
   background: #fff;
 }
-
 button :hover {
-  -webkit-box-shadow: 5px 5px #111;
-          box-shadow: 5px 5px #111;
+  box-shadow: 5px 5px #111;
 }
 
-hr + skinny-hr {
+hr {
+  margin: 1rem 0;
+  background-color: transparent;
+  width: 50%;
+  border-style: solid;
+  border-width: 1px;
   opacity: 0.3;
 }
 
@@ -110,7 +86,6 @@ hr + skinny-hr {
   margin-top: 6rem;
   width: 45%;
 }
-
 @media screen and (max-width: 736px) {
   .wrap {
     padding: 1rem;
@@ -119,19 +94,10 @@ hr + skinny-hr {
 }
 
 .tag-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .tag {
@@ -141,50 +107,26 @@ hr + skinny-hr {
 }
 
 .section {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .bottom-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding-top: 3rem;
   text-align: center;
 }
 
 .footer {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   background-color: transparent;
   position: relative;
@@ -195,7 +137,6 @@ hr + skinny-hr {
   line-height: 1em;
   opacity: 0.8;
 }
-
 .footer a {
   border-bottom: none;
   display: contents;
@@ -207,7 +148,6 @@ hr + skinny-hr {
   width: 45%;
   overflow: hidden;
 }
-
 @media screen and (max-width: 736px) {
   #splash {
     width: 90%;
@@ -235,29 +175,24 @@ hr + skinny-hr {
   line-height: 2em;
   letter-spacing: 2px;
 }
-
 #content div {
   width: 100%;
   height: 100%;
   margin-bottom: 1em;
 }
-
 #content h1, #content h2, #content h3 {
   margin: 1em 0em;
   text-align: left;
 }
-
 #content p {
   margin-bottom: 1em;
   line-height: 1.8;
   letter-spacing: 1.5px;
   opacity: 0.8;
 }
-
 #content .highlight {
   width: 100%;
 }
-
 #content pre {
   line-height: 2rem;
   border-radius: 3px;
@@ -267,19 +202,16 @@ hr + skinny-hr {
   width: 100%;
   margin-bottom: 1em;
 }
-
 #content pre > code {
   border: none;
 }
-
 #content code {
   font-size: 0.9rem;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
   padding: 0.1rem;
   border-radius: 3px;
   border: 1px solid #cccccc;
 }
-
 #content img {
   width: 100%;
   max-width: 100%;
@@ -287,7 +219,6 @@ hr + skinny-hr {
   margin: 2rem auto;
   opacity: 1;
 }
-
 #content blockquote {
   background-color: #cccccc;
   color: #575965;
@@ -295,69 +226,55 @@ hr + skinny-hr {
   margin: 2rem 1rem 2rem 1rem;
   border-radius: 3px;
 }
-
 #content blockquote a {
   color: #111;
 }
-
 #content blockquote ul {
   margin-top: 1rem;
 }
-
 #content blockquote li {
   list-style: disc;
 }
-
 #content table {
   width: 100%;
   border-collapse: collapse;
   margin: 1rem 0;
   overflow-x: auto;
 }
-
 #content table th {
   font-size: 0.9rem;
 }
-
 #content table td, #content table th {
   padding: 2px 5px;
   text-align: center;
   border: 1px solid #cccccc;
 }
-
 #content li {
   line-height: 2;
   padding-left: 0.4rem;
 }
-
 #content li :last-child {
   margin-bottom: 1rem;
 }
-
 #content li ul {
   list-style: disc outside;
   padding-left: 2rem;
 }
-
 #content li ol {
   list-style: decimal outside;
   padding-left: 2rem;
 }
-
 #content li .gist {
   width: 100%;
 }
-
 #content li .gist td, #content li .gist th {
   text-align: left;
   border: 0;
 }
-
 #content li .gist .gist-meta {
   background-color: transparent;
   color: #fff;
 }
-
 #content li .gist .gist-meta a {
   color: #fff;
 }
@@ -369,18 +286,14 @@ hr + skinny-hr {
 }
 
 .grid {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-auto-rows: 400px;
 }
-
 @media screen and (max-width: 736px) {
   .grid {
-    -ms-grid-columns: (minmax(100%, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
   }
 }
 
@@ -392,59 +305,30 @@ hr + skinny-hr {
 .grid > div > img {
   height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   opacity: 1;
 }
 
 .grid > div > a > img {
   height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   opacity: 1;
 }
 
 .go-left {
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .go-right {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .go-center {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
-.video {
-    position: relative; 
-    padding-bottom: 56.25%; 
-    height: 0; 
-    overflow: hidden;
-
-    }
-
-#embed {
-     position: absolute; 
-     top: 0; 
-     left: 0; 
-     width: 100%; 
-     height: 100%; 
-     border:0;
 /*# sourceMappingURL=main.css.map */
