--- a/src/css/sass/main.css
+++ b/src/css/sass/main.css
@@ -62,14 +62,11 @@ a :active {
   color: #cccccc;
 }
 
-button {
-  padding: 20px;
-  border: 0px;
-  border-radius: 5px;
-  background: #fff;
-}
-button :hover {
-  box-shadow: 5px 5px #111;
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 hr {
@@ -79,6 +76,94 @@ hr {
   border-style: solid;
   border-width: 1px;
   opacity: 0.3;
+}
+
+header {
+  margin-top: 3rem;
+  font-family: "Didact Gothic", "sans serif";
+  font-size: 2rem;
+  line-height: 3rem;
+  margin-bottom: 2rem;
+}
+
+section {
+  margin: 2rem 0;
+  line-height: 2em;
+  letter-spacing: 2px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+section div {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 1em;
+}
+section h1, section h2, section h3 {
+  margin: 1em 0em;
+  text-align: left;
+}
+section p {
+  margin-bottom: 1em;
+  line-height: 1.8;
+  letter-spacing: 1.5px;
+  opacity: 0.8;
+}
+section .highlight {
+  width: 100%;
+}
+section img {
+  width: 100%;
+  max-width: 100%;
+  display: block;
+  margin: 2rem auto;
+  opacity: 1;
+}
+section blockquote {
+  background-color: #cccccc;
+  color: #575965;
+  padding: 2rem;
+  margin: 2rem 1rem 2rem 1rem;
+  border-radius: 3px;
+}
+section blockquote a {
+  color: #111;
+}
+section blockquote ul {
+  margin-top: 1rem;
+}
+section blockquote li {
+  list-style: disc;
+}
+section table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 1rem 0;
+  overflow-x: auto;
+}
+section table th {
+  font-size: 0.9rem;
+}
+section table td, section table th {
+  padding: 2px 5px;
+  text-align: center;
+  border: 1px solid #cccccc;
+}
+section li {
+  line-height: 2;
+  padding-left: 0.4rem;
+}
+section li :last-child {
+  margin-bottom: 1rem;
+}
+section li ul {
+  list-style: disc outside;
+  padding-left: 2rem;
+}
+section li ol {
+  list-style: decimal outside;
+  padding-left: 2rem;
 }
 
 .wrap {
@@ -106,13 +191,6 @@ hr {
   bottom: 0;
 }
 
-.section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
 .bottom-menu {
   display: flex;
   flex-direction: column;
@@ -122,7 +200,7 @@ hr {
   text-align: center;
 }
 
-.footer {
+footer {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -137,7 +215,7 @@ hr {
   line-height: 1em;
   opacity: 0.8;
 }
-.footer a {
+footer a {
   border-bottom: none;
   display: contents;
 }
@@ -160,137 +238,22 @@ hr {
   font-weight: 300;
   margin-bottom: 2rem;
   line-height: 1.5em;
+  height: auto;
 }
 
-#title {
-  margin-top: 3rem;
-  font-family: "Didact Gothic", "sans serif";
-  font-size: 2rem;
-  line-height: 3rem;
-  margin-bottom: 2rem;
-}
-
-#content {
-  margin: 2rem 0;
-  line-height: 2em;
-  letter-spacing: 2px;
-}
-#content div {
-  width: 100%;
-  height: 100%;
-  margin-bottom: 1em;
-}
-#content h1, #content h2, #content h3 {
-  margin: 1em 0em;
-  text-align: left;
-}
-#content p {
-  margin-bottom: 1em;
-  line-height: 1.8;
-  letter-spacing: 1.5px;
-  opacity: 0.8;
-}
-#content .video {
+.video {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
 }
-#content .video iframe {
+.video iframe {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   border: 0;
-}
-#content .highlight {
-  width: 100%;
-}
-#content pre {
-  line-height: 2rem;
-  border-radius: 3px;
-  padding: 1rem;
-  overflow-x: auto;
-  background-color: #000004;
-  width: 100%;
-  margin-bottom: 1em;
-}
-#content pre > code {
-  border: none;
-}
-#content code {
-  font-size: 0.9rem;
-  font-family: "Source Code Pro", monospace;
-  padding: 0.1rem;
-  border-radius: 3px;
-  border: 1px solid #cccccc;
-}
-#content img {
-  width: 100%;
-  max-width: 100%;
-  display: block;
-  margin: 2rem auto;
-  opacity: 1;
-}
-#content blockquote {
-  background-color: #cccccc;
-  color: #575965;
-  padding: 2rem;
-  margin: 2rem 1rem 2rem 1rem;
-  border-radius: 3px;
-}
-#content blockquote a {
-  color: #111;
-}
-#content blockquote ul {
-  margin-top: 1rem;
-}
-#content blockquote li {
-  list-style: disc;
-}
-#content table {
-  width: 100%;
-  border-collapse: collapse;
-  margin: 1rem 0;
-  overflow-x: auto;
-}
-#content table th {
-  font-size: 0.9rem;
-}
-#content table td, #content table th {
-  padding: 2px 5px;
-  text-align: center;
-  border: 1px solid #cccccc;
-}
-#content li {
-  line-height: 2;
-  padding-left: 0.4rem;
-}
-#content li :last-child {
-  margin-bottom: 1rem;
-}
-#content li ul {
-  list-style: disc outside;
-  padding-left: 2rem;
-}
-#content li ol {
-  list-style: decimal outside;
-  padding-left: 2rem;
-}
-#content .gist {
-  width: 100%;
-}
-#content .gist td, #content .gist th {
-  text-align: left;
-  border: 0;
-}
-#content .gist .gist-meta {
-  background-color: transparent;
-  color: #fff;
-}
-#content .gist .gist-meta a {
-  color: #fff;
 }
 
 .tag {
@@ -311,19 +274,12 @@ hr {
   }
 }
 
-.grid > div {
+.grid > figure {
   background-color: transparent;
   overflow: hidden;
 }
 
-.grid > div > img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  opacity: 1;
-}
-
-.grid > div > a > img {
+.grid > figure > a > img {
   height: 100%;
   width: 100%;
   object-fit: cover;
